--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,6 +26,8 @@ jobs:
       run: python ./EnCAB/EnCAB.py run
     - name: push changes
       run: |
+        git config user.email "actions@github.com"
+        git config user.name "GitHub Actions"
         git add .
-        git commit -m "GitHub action program run"
+        git commit -m "GitHub action program run"  # git diff --quiet || ...
         git push origin pre-print
