--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest  # windows-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -29,5 +29,5 @@ jobs:
         git config user.email "actions@github.com"
         git config user.name "GitHub Actions"
         git add .
-        git commit -m "GitHub action program run"  # git diff --quiet || ...
+        git commit -m "GitHub action program run"
         git push origin pre-print
